<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.ph_data01221240053.raye7task.MapsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhit"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/from"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"

                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"

                android:layout_weight="1"
                android:background="@drawable/shape"
                android:backgroundTintMode="@null"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/sourceHint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textColor="@android:color/background_dark" />

            <ImageView
                android:id="@+id/sClear"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_shortcut_cancel"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:text="To     "
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:backgroundTintMode="@null"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/destinationHint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textColor="@android:color/background_dark" />

            <ImageView
                android:id="@+id/dClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_shortcut_cancel"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"

                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/shape"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/go"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/button2"

            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center|bottom"

            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/car"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

        <Button
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/pick"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</FrameLayout>
